# file-region

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: basic.rs
src/: core.rs  error.rs  lib.rs  tests.rs
